update starting method for windows