@@ -30,6 +30,7 @@
 package org.n52.wps.server.r.util;
 
 import java.io.IOException;
+import java.util.Arrays;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -48,25 +49,65 @@ public class RStarter {
 
     private static Logger log = LoggerFactory.getLogger(RStarter.class);
 
+    // TODO: make starter non-static and variables configurable
+    public enum OutputLevel {
+        quiet, slave, verbose;
+
+        public String getCommand() {
+            switch (this) {
+            case quiet:
+                return "--quiet";
+            case slave:
+                return "--slave";
+            case verbose:
+                return "--verbose";
+            default:
+                return slave.getCommand();
+            }
+        }
+    }
+
     private static void startRServeOnLinux() throws InterruptedException, IOException {
-        String rserveStartCMD = "R CMD Rserve --vanilla --slave";
+        String rserveStartCMD = "R CMD Rserve --vanilla --slave"; // TODO make configurable
         Runtime.getRuntime().exec(rserveStartCMD).waitFor();
     }
 
+    /**
+     * command for local testing: cmd /c start R --vanilla --slave -e library(Rserve);Rserve()
+     * 
+     * @throws IOException
+     */
     private static void startRServeOnWindows() throws IOException {
         // TODO try to do more with the process here, e.g. finding out if R could actually be started, or
         // setting the working directory! See http://docs.oracle.com/javase/7/docs/api/java/lang/Runtime.html
         // and
         // http://openbook.galileocomputing.de/javainsel/javainsel_11_008.html
-        String rserveStartCMD = "cmd /c start R -e library(Rserve); Rserve() --vanilla --slave";
-        Process process = Runtime.getRuntime().exec(rserveStartCMD);
+        ProcessBuilder pb = new ProcessBuilder("cmd",
+                                               "/c",
+                                               "start",
+                                               "R",
+                                               log.isDebugEnabled() ? OutputLevel.verbose.getCommand()
+                                                                   : OutputLevel.slave.getCommand(),
+                                               "--vanilla",
+                                               "-e library(Rserve);Rserve()");
+        pb.inheritIO(); // nothing here since the command starts a new shell
 
-        log.info("Process: {}, alive: {}", process.toString(), process.isAlive());
-        // TODO try to connect to output stream here and redirect it to user interface, and store the process
-        // so that it can be destroyed.
+        log.info("ProcessBuilder: {} | command: {} | directory: {} | environment: {}",
+                 pb,
+                 pb.command(),
+                 pb.directory(),
+                 Arrays.toString(pb.environment().entrySet().toArray()));
+        Process process = pb.start();
+
+        log.info("Process: {}, alive: {}, exit value: {}", process.toString(), process.isAlive());
+        // process should have already exited at this point
+        // TODO see if access to the started shell is possible, maybe this helps:
+        // http://www.javaworld.com/article/2071275/core-java/when-runtime-exec---won-t.html?page=2
+        if ( !process.isAlive())
+            log.debug("Process exit status: {}", process.exitValue());
     }
 
-    public void startR() throws InterruptedException, IOException {
+    public synchronized void startR() throws InterruptedException, IOException {
         log.debug("Starting R locally...");
 
         if (System.getProperty("os.name").toLowerCase().indexOf("linux") > -1) {
